--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
@@ -22,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3"
   }
 }
